etl bad output fixed

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,331 +398,7 @@
        "[2372474 rows x 16 columns]"
       ]
      },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_purchases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>InventoryId</th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Brand</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>VendorNumber</th>\n",
-       "      <th>VendorName</th>\n",
-       "      <th>PONumber</th>\n",
-       "      <th>PODate</th>\n",
-       "      <th>ReceivingDate</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>PayDate</th>\n",
-       "      <th>PurchasePrice</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Dollars</th>\n",
-       "      <th>Classification</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>69_MOUNTMEND_8412</td>\n",
-       "      <td>69</td>\n",
-       "      <td>8412</td>\n",
-       "      <td>Tequila Ocho Plata Fresno</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>105</td>\n",
-       "      <td>ALTAMAR BRANDS LLC</td>\n",
-       "      <td>8124</td>\n",
-       "      <td>2015-12-21</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>2016-01-04</td>\n",
-       "      <td>2016-02-16</td>\n",
-       "      <td>35.71</td>\n",
-       "      <td>6</td>\n",
-       "      <td>214.26</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30_CULCHETH_5255</td>\n",
-       "      <td>30</td>\n",
-       "      <td>5255</td>\n",
-       "      <td>TGI Fridays Ultimte Mudslide</td>\n",
-       "      <td>1.75L</td>\n",
-       "      <td>4466</td>\n",
-       "      <td>AMERICAN VINTAGE BEVERAGE</td>\n",
-       "      <td>8137</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>2016-01-01</td>\n",
-       "      <td>2016-01-07</td>\n",
-       "      <td>2016-02-21</td>\n",
-       "      <td>9.35</td>\n",
-       "      <td>4</td>\n",
-       "      <td>37.40</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34_PITMERDEN_5215</td>\n",
-       "      <td>34</td>\n",
-       "      <td>5215</td>\n",
-       "      <td>TGI Fridays Long Island Iced</td>\n",
-       "      <td>1.75L</td>\n",
-       "      <td>4466</td>\n",
-       "      <td>AMERICAN VINTAGE BEVERAGE</td>\n",
-       "      <td>8137</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>2016-01-07</td>\n",
-       "      <td>2016-02-21</td>\n",
-       "      <td>9.41</td>\n",
-       "      <td>5</td>\n",
-       "      <td>47.05</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1_HARDERSFIELD_5255</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5255</td>\n",
-       "      <td>TGI Fridays Ultimte Mudslide</td>\n",
-       "      <td>1.75L</td>\n",
-       "      <td>4466</td>\n",
-       "      <td>AMERICAN VINTAGE BEVERAGE</td>\n",
-       "      <td>8137</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>2016-01-01</td>\n",
-       "      <td>2016-01-07</td>\n",
-       "      <td>2016-02-21</td>\n",
-       "      <td>9.35</td>\n",
-       "      <td>6</td>\n",
-       "      <td>56.10</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>76_DONCASTER_2034</td>\n",
-       "      <td>76</td>\n",
-       "      <td>2034</td>\n",
-       "      <td>Glendalough Double Barrel</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>388</td>\n",
-       "      <td>ATLANTIC IMPORTING COMPANY</td>\n",
-       "      <td>8169</td>\n",
-       "      <td>2015-12-24</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>2016-01-09</td>\n",
-       "      <td>2016-02-16</td>\n",
-       "      <td>21.32</td>\n",
-       "      <td>5</td>\n",
-       "      <td>106.60</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372469</th>\n",
-       "      <td>49_GARIGILL_22298</td>\n",
-       "      <td>49</td>\n",
-       "      <td>22298</td>\n",
-       "      <td>Zorvino Vyds Sangiovese</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>90058</td>\n",
-       "      <td>ZORVINO VINEYARDS</td>\n",
-       "      <td>13593</td>\n",
-       "      <td>2016-12-19</td>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>2017-01-09</td>\n",
-       "      <td>2017-02-06</td>\n",
-       "      <td>8.06</td>\n",
-       "      <td>12</td>\n",
-       "      <td>96.72</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372470</th>\n",
-       "      <td>1_HARDERSFIELD_19556</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19556</td>\n",
-       "      <td>Zorvino Bacca Z Blackberry</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>90058</td>\n",
-       "      <td>ZORVINO VINEYARDS</td>\n",
-       "      <td>13593</td>\n",
-       "      <td>2016-12-19</td>\n",
-       "      <td>2016-12-27</td>\n",
-       "      <td>2017-01-09</td>\n",
-       "      <td>2017-02-06</td>\n",
-       "      <td>9.39</td>\n",
-       "      <td>12</td>\n",
-       "      <td>112.68</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372471</th>\n",
-       "      <td>66_EANVERNESS_22297</td>\n",
-       "      <td>66</td>\n",
-       "      <td>22297</td>\n",
-       "      <td>Zorvino Vyds Pearz</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>90058</td>\n",
-       "      <td>ZORVINO VINEYARDS</td>\n",
-       "      <td>13593</td>\n",
-       "      <td>2016-12-19</td>\n",
-       "      <td>2016-12-26</td>\n",
-       "      <td>2017-01-09</td>\n",
-       "      <td>2017-02-06</td>\n",
-       "      <td>6.75</td>\n",
-       "      <td>12</td>\n",
-       "      <td>81.00</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372472</th>\n",
-       "      <td>69_MOUNTMEND_19557</td>\n",
-       "      <td>69</td>\n",
-       "      <td>19557</td>\n",
-       "      <td>Zorvino Fragole Z Strawberry</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>90058</td>\n",
-       "      <td>ZORVINO VINEYARDS</td>\n",
-       "      <td>13593</td>\n",
-       "      <td>2016-12-19</td>\n",
-       "      <td>2016-12-26</td>\n",
-       "      <td>2017-01-09</td>\n",
-       "      <td>2017-02-06</td>\n",
-       "      <td>9.39</td>\n",
-       "      <td>12</td>\n",
-       "      <td>112.68</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372473</th>\n",
-       "      <td>55_DRY GULCH_22298</td>\n",
-       "      <td>55</td>\n",
-       "      <td>22298</td>\n",
-       "      <td>Zorvino Vyds Sangiovese</td>\n",
-       "      <td>750mL</td>\n",
-       "      <td>90058</td>\n",
-       "      <td>ZORVINO VINEYARDS</td>\n",
-       "      <td>13593</td>\n",
-       "      <td>2016-12-19</td>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>2017-01-09</td>\n",
-       "      <td>2017-02-06</td>\n",
-       "      <td>8.06</td>\n",
-       "      <td>12</td>\n",
-       "      <td>96.72</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2372474 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  InventoryId  Store  Brand                   Description  \\\n",
-       "0           69_MOUNTMEND_8412     69   8412     Tequila Ocho Plata Fresno   \n",
-       "1            30_CULCHETH_5255     30   5255  TGI Fridays Ultimte Mudslide   \n",
-       "2           34_PITMERDEN_5215     34   5215  TGI Fridays Long Island Iced   \n",
-       "3         1_HARDERSFIELD_5255      1   5255  TGI Fridays Ultimte Mudslide   \n",
-       "4           76_DONCASTER_2034     76   2034     Glendalough Double Barrel   \n",
-       "...                       ...    ...    ...                           ...   \n",
-       "2372469     49_GARIGILL_22298     49  22298       Zorvino Vyds Sangiovese   \n",
-       "2372470  1_HARDERSFIELD_19556      1  19556    Zorvino Bacca Z Blackberry   \n",
-       "2372471   66_EANVERNESS_22297     66  22297            Zorvino Vyds Pearz   \n",
-       "2372472    69_MOUNTMEND_19557     69  19557  Zorvino Fragole Z Strawberry   \n",
-       "2372473    55_DRY GULCH_22298     55  22298       Zorvino Vyds Sangiovese   \n",
-       "\n",
-       "          Size  VendorNumber                   VendorName  PONumber  \\\n",
-       "0        750mL           105  ALTAMAR BRANDS LLC               8124   \n",
-       "1        1.75L          4466  AMERICAN VINTAGE BEVERAGE        8137   \n",
-       "2        1.75L          4466  AMERICAN VINTAGE BEVERAGE        8137   \n",
-       "3        1.75L          4466  AMERICAN VINTAGE BEVERAGE        8137   \n",
-       "4        750mL           388  ATLANTIC IMPORTING COMPANY       8169   \n",
-       "...        ...           ...                          ...       ...   \n",
-       "2372469  750mL         90058  ZORVINO VINEYARDS               13593   \n",
-       "2372470  750mL         90058  ZORVINO VINEYARDS               13593   \n",
-       "2372471  750mL         90058  ZORVINO VINEYARDS               13593   \n",
-       "2372472  750mL         90058  ZORVINO VINEYARDS               13593   \n",
-       "2372473  750mL         90058  ZORVINO VINEYARDS               13593   \n",
-       "\n",
-       "             PODate ReceivingDate InvoiceDate     PayDate  PurchasePrice  \\\n",
-       "0        2015-12-21    2016-01-02  2016-01-04  2016-02-16          35.71   \n",
-       "1        2015-12-22    2016-01-01  2016-01-07  2016-02-21           9.35   \n",
-       "2        2015-12-22    2016-01-02  2016-01-07  2016-02-21           9.41   \n",
-       "3        2015-12-22    2016-01-01  2016-01-07  2016-02-21           9.35   \n",
-       "4        2015-12-24    2016-01-02  2016-01-09  2016-02-16          21.32   \n",
-       "...             ...           ...         ...         ...            ...   \n",
-       "2372469  2016-12-19    2016-12-28  2017-01-09  2017-02-06           8.06   \n",
-       "2372470  2016-12-19    2016-12-27  2017-01-09  2017-02-06           9.39   \n",
-       "2372471  2016-12-19    2016-12-26  2017-01-09  2017-02-06           6.75   \n",
-       "2372472  2016-12-19    2016-12-26  2017-01-09  2017-02-06           9.39   \n",
-       "2372473  2016-12-19    2016-12-28  2017-01-09  2017-02-06           8.06   \n",
-       "\n",
-       "         Quantity  Dollars  Classification  \n",
-       "0               6   214.26               1  \n",
-       "1               4    37.40               1  \n",
-       "2               5    47.05               1  \n",
-       "3               6    56.10               1  \n",
-       "4               5   106.60               1  \n",
-       "...           ...      ...             ...  \n",
-       "2372469        12    96.72               2  \n",
-       "2372470        12   112.68               2  \n",
-       "2372471        12    81.00               2  \n",
-       "2372472        12   112.68               2  \n",
-       "2372473        12    96.72               2  \n",
-       "\n",
-       "[2372474 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,28 +416,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "245907 : Lenght before droping duplicates\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['InventoryId', 'PurchasePrice'], dtype='object')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[95]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_purchases.shape[\u001b[32m0\u001b[39m], \u001b[33m\"\u001b[39m\u001b[33m: Lenght before droping duplicates\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m df_purchases = (\u001b[43mdf_purchases\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mInventoryId\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mPurchasePrice\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m.drop_duplicates(subset=\u001b[33m\"\u001b[39m\u001b[33mInventoryId\u001b[39m\u001b[33m\"\u001b[39m)).rename(columns={\n\u001b[32m      3\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mInventoryId\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33minventory_id\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      4\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mPurchasePrice\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mpurchase_price\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      5\u001b[39m })\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_purchases.shape[\u001b[32m0\u001b[39m], \u001b[33m\"\u001b[39m\u001b[33m: Lenght after droping duplicates\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Leonel\\workspace\\Personal\\Annie-s-Magic-Numbers-DA-E\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[32m   4112\u001b[39m         key = \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m     indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcolumns\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m]\n\u001b[32m   4115\u001b[39m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[32m   4116\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) == \u001b[38;5;28mbool\u001b[39m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Leonel\\workspace\\Personal\\Annie-s-Magic-Numbers-DA-E\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6212\u001b[39m, in \u001b[36mIndex._get_indexer_strict\u001b[39m\u001b[34m(self, key, axis_name)\u001b[39m\n\u001b[32m   6209\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   6210\u001b[39m     keyarr, indexer, new_indexer = \u001b[38;5;28mself\u001b[39m._reindex_non_unique(keyarr)\n\u001b[32m-> \u001b[39m\u001b[32m6212\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   6214\u001b[39m keyarr = \u001b[38;5;28mself\u001b[39m.take(indexer)\n\u001b[32m   6215\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[32m   6216\u001b[39m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Leonel\\workspace\\Personal\\Annie-s-Magic-Numbers-DA-E\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6261\u001b[39m, in \u001b[36mIndex._raise_if_missing\u001b[39m\u001b[34m(self, key, indexer, axis_name)\u001b[39m\n\u001b[32m   6259\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[32m   6260\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nmissing == \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[32m-> \u001b[39m\u001b[32m6261\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6263\u001b[39m     not_found = \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask.nonzero()[\u001b[32m0\u001b[39m]].unique())\n\u001b[32m   6264\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in index\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyError\u001b[39m: \"None of [Index(['InventoryId', 'PurchasePrice'], dtype='object')] are in the [columns]\""
+      "2372474 : Lenght before droping duplicates\n",
+      "245907 : Lenght after droping duplicates\n"
      ]
     }
    ],
@@ -1055,7 +718,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1069,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
